Closed Bug 1892493 Opened 2 years ago Closed 2 years ago

Perma [tier 2] gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:541: libfake.so] Error 1

Categories

(Firefox Build System :: General, defect, P5)

defect

Tracking

(firefox-esr115 unaffected, firefox125 unaffected, firefox126 unaffected, firefox127 fixed)

RESOLVED FIXED
127 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox125 --- unaffected
firefox126 --- unaffected
firefox127 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: glandium)

References

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: chorotan [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=455176809&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/deUd28ayQsuWEPG76dWYfg/runs/0/artifacts/public/logs/live_backing.log


task 2024-04-19T15:59:27.194Z] 15:59:27     INFO -  TEST-PASS | check_textrel | firefox
[task 2024-04-19T15:59:27.194Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/browser/app/no-pie'
[task 2024-04-19T15:59:27.196Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/browser/app/no-pie'
[task 2024-04-19T15:59:27.197Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/browser/app/no-pie'
[task 2024-04-19T15:59:27.198Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/browser/app/no-pie'
[task 2024-04-19T15:59:27.198Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/browser/app/no-pie'
[task 2024-04-19T15:59:27.210Z] 15:59:27     INFO -  gmake[4]: Nothing to be done for 'host'.
[task 2024-04-19T15:59:27.223Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/wasm2c_sandbox_compiler'
[task 2024-04-19T15:59:27.223Z] 15:59:27     INFO -  config/external/wasm2c_sandbox_compiler/wasm2c
[task 2024-04-19T15:59:27.223Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/wasm2c_sandbox_compiler'
[task 2024-04-19T15:59:27.231Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/fake-cdm'
[task 2024-04-19T15:59:27.232Z] 15:59:27     INFO -  dom/media/fake-cdm/libfake.so
[task 2024-04-19T15:59:27.232Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media/fake-cdm'
[task 2024-04-19T15:59:27.237Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/fake-cdm'
[task 2024-04-19T15:59:27.237Z] 15:59:27     INFO -  rm -f libfake.so
[task 2024-04-19T15:59:27.238Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media/fake-cdm'
[task 2024-04-19T15:59:27.254Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/fake-cdm'
[task 2024-04-19T15:59:27.256Z] 15:59:27     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/8 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/8 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -gdwarf-4 -O2 -fno-omit-frame-pointer -funwind-tables -Werror -shared -Wl,-z,defs -Wl,--gc-sections -Wl,-h,libfake.so -o libfake.so -Wl,@/builds/worker/workspace/obj-build/dom/media/fake-cdm/libfake_so.list  -B /builds/worker/workspace/obj-build/build/unix/elfhack  -lpthread -Wl,-rpath-link,/builds/worker/fetches/sysroot-x86_64-linux-gnu/lib/x86_64-linux-gnu -L/builds/worker/fetches/sysroot-x86_64-linux-gnu/lib/x86_64-linux-gnu -Wl,-rpath-link,/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu -L/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu -L/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/gcc/x86_64-linux-gnu/8 -Wl,--build-id=sha1 -Wl,-z,noexecstack -Wl,-z,text -Wl,-z,relro -Wl,-z,now -Wl,-z,nocopyreloc -fstack-protector-strong -Wl,-rpath-link,/builds/worker/workspace/obj-build/dist/bin -Wl,-rpath-link,/usr/local/lib  ../../../build/pure_virtual/libpure_virtual.a    -ldl  -Wl,--version-script,/builds/worker/checkouts/gecko/build/unix/stdc++compat/hide_std.ld
[task 2024-04-19T15:59:27.256Z] 15:59:27     INFO -  Could not determine output file.
[task 2024-04-19T15:59:27.257Z] 15:59:27    ERROR -  collect2: error: ld returned 1 exit status
[task 2024-04-19T15:59:27.257Z] 15:59:27    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:541: libfake.so] Error 1
[task 2024-04-19T15:59:27.257Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media/fake-cdm'
[task 2024-04-19T15:59:27.257Z] 15:59:27     INFO -  gmake[4]: Target 'target' not remade because of errors.
[task 2024-04-19T15:59:27.258Z] 15:59:27     INFO -  gmake[4]: Target 'target' not remade because of errors.
[task 2024-04-19T15:59:27.258Z] 15:59:27    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: dom/media/fake-cdm/target] Error 2
[task 2024-04-19T15:59:27.281Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/gmp-plugin-openh264'
[task 2024-04-19T15:59:27.282Z] 15:59:27     INFO -  dom/media/gmp-plugin-openh264/libfakeopenh264.so
[task 2024-04-19T15:59:27.282Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media/gmp-plugin-openh264'
[task 2024-04-19T15:59:27.284Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/gmp-plugin-openh264'
[task 2024-04-19T15:59:27.285Z] 15:59:27     INFO -  rm -f libfakeopenh264.so
[task 2024-04-19T15:59:27.286Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media/gmp-plugin-openh264'
[task 2024-04-19T15:59:27.296Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/gmp-plugin-openh264'
[task 2024-04-19T15:59:27.299Z] 15:59:27     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/8 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/8 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -gdwarf-4 -O2 -fno-omit-frame-pointer -funwind-tables -Werror -shared -Wl,-z,defs -Wl,--gc-sections -Wl,-h,libfakeopenh264.so -o libfakeopenh264.so -Wl,@/builds/worker/workspace/obj-build/dom/media/gmp-plugin-openh264/libfakeopenh264_so.list  -B /builds/worker/workspace/obj-build/build/unix/elfhack  -lpthread -Wl,-rpath-link,/builds/worker/fetches/sysroot-x86_64-linux-gnu/lib/x86_64-linux-gnu -L/builds/worker/fetches/sysroot-x86_64-linux-gnu/lib/x86_64-linux-gnu -Wl,-rpath-link,/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu -L/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu -L/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/gcc/x86_64-linux-gnu/8 -Wl,--build-id=sha1 -Wl,-z,noexecstack -Wl,-z,text -Wl,-z,relro -Wl,-z,now -Wl,-z,nocopyreloc -fstack-protector-strong -Wl,-rpath-link,/builds/worker/workspace/obj-build/dist/bin -Wl,-rpath-link,/usr/local/lib  ../../../build/pure_virtual/libpure_virtual.a    -ldl  -Wl,--version-script,/builds/worker/checkouts/gecko/build/unix/stdc++compat/hide_std.ld
[task 2024-04-19T15:59:27.300Z] 15:59:27     INFO -  Could not determine output file.
[task 2024-04-19T15:59:27.301Z] 15:59:27    ERROR -  collect2: error: ld returned 1 exit status
[task 2024-04-19T15:59:27.301Z] 15:59:27    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:541: libfakeopenh264.so] Error 1
[task 2024-04-19T15:59:27.301Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media/gmp-plugin-openh264'
[task 2024-04-19T15:59:27.302Z] 15:59:27     INFO -  gmake[4]: Target 'target' not remade because of errors.
[task 2024-04-19T15:59:27.302Z] 15:59:27     INFO -  gmake[4]: Target 'target' not remade because of errors.
[task 2024-04-19T15:59:27.302Z] 15:59:27    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: dom/media/gmp-plugin-openh264/target] Error 2
[task 2024-04-19T15:59:27.322Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/gkcodecs'
[task 2024-04-19T15:59:27.322Z] 15:59:27     INFO -  config/external/gkcodecs/libgkcodecs.so
[task 2024-04-19T15:59:27.323Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/gkcodecs'
[task 2024-04-19T15:59:27.323Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/gkcodecs'
[task 2024-04-19T15:59:27.323Z] 15:59:27     INFO -  rm -f libgkcodecs.so
[task 2024-04-19T15:59:27.323Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/gkcodecs'
[task 2024-04-19T15:59:27.340Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/gkcodecs'
[task 2024-04-19T15:59:27.342Z] 15:59:27     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/8 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/8 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -gdwarf-4 -O2 -fno-omit-frame-pointer -funwind-tables -Werror -shared -Wl,-z,defs -Wl,--gc-sections -Wl,-h,libgkcodecs.so -o libgkcodecs.so -Wl,@/builds/worker/workspace/obj-build/config/external/gkcodecs/libgkcodecs_so.list  -B /builds/worker/workspace/obj-build/build/unix/elfhack  -lpthread -Wl,-rpath-link,/builds/worker/fetches/sysroot-x86_64-linux-gnu/lib/x86_64-linux-gnu -L/builds/worker/fetches/sysroot-x86_64-linux-gnu/lib/x86_64-linux-gnu -Wl,-rpath-link,/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu -L/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu -L/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/gcc/x86_64-linux-gnu/8 -Wl,--build-id=sha1 -Wl,-z,noexecstack -Wl,-z,text -Wl,-z,relro -Wl,-z,now -Wl,-z,nocopyreloc -fstack-protector-strong -Wl,-rpath-link,/builds/worker/workspace/obj-build/dist/bin -Wl,-rpath-link,/usr/local/lib  ../../../build/pure_virtual/libpure_virtual.a  -Wl,--version-script,libgkcodecs.so.symbols  -ldl  -lm -Wl,--version-script,/builds/worker/checkouts/gecko/build/unix/stdc++compat/hide_std.ld
[task 2024-04-19T15:59:27.343Z] 15:59:27     INFO -  Could not determine output file.
[task 2024-04-19T15:59:27.343Z] 15:59:27    ERROR -  collect2: error: ld returned 1 exit status
[task 2024-04-19T15:59:27.344Z] 15:59:27    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:541: libgkcodecs.so] Error 1
[task 2024-04-19T15:59:27.344Z] 15:59:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/gkcodecs'
[task 2024-04-19T15:59:27.344Z] 15:59:27     INFO -  gmake[4]: Target 'target' not remade because of errors.
[task 2024-04-19T15:59:27.345Z] 15:59:27     INFO -  gmake[4]: Target 'target' not remade because of errors.
[task 2024-04-19T15:59:27.345Z] 15:59:27    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: config/external/gkcodecs/target] Error 2
[task 2024-04-19T15:59:27.361Z] 15:59:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/base'
[task 2024-04-19T15:59:27.361Z] 15:59:27     INFO -  mkdir -p '.deps/'
Flags: needinfo?(sguelton)
Flags: needinfo?(mh+mozilla)

Set release status flags based on info from the regressing bug 1892198

This all comes down to a combination of GCC doing something rather unexpected with response files, and relrhack not supporting it.

Assignee: nobody → mh+mozilla
Blocks: 1892198
Flags: needinfo?(sguelton)
Flags: needinfo?(mh+mozilla)
No longer regressed by: 1892198
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/71795f53ee46 Support reading a response file when that's the only thing on the command line. r=sergesanspaille
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
Regressions: 1903254
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: