Bug 1892493 - Support reading a response file when that's the only thing on the command line. r=sergesanspaille

Differential Revision: https://phabricator.services.mozilla.com/D208284